--- a/desafios/d010/estilo/style.css
+++ b/desafios/d010/estilo/style.css
@@ -47,7 +47,7 @@ header > p {
     max-width: 540px;
     margin: auto;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.315);
-    padding-bottom: 20px;
+    margin-bottom: 20px;
 }
 nav { 
     background-color: var(--cor3);
