--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -1,6 +1,11 @@
+@charset "UTF-8";
 * {
     margin: 0px;
-    border: 0px;
+    padding: 0px;
+}
+body {
+    min-height: 100vh;
+    background-color: #a9a9a9;
 }
 header {
     background-color: #000000;
@@ -8,49 +13,43 @@ header {
     padding: 40px;
     text-align: center;
 }
-header a {
+header > h1 {
+    padding-top: 50px;
+    font-variant: small-caps;
+}
+header > h3 {
+    padding-bottom: 50px;
+}
+a {
     text-decoration: none;
     color: #ffffff;
 }
-header a:hover {
+a:hover {
     text-decoration: underline;
     color: #8b0e00;
     transition-duration: 1s;
 }
-section p {
-    padding-top: 12px;
-    margin-bottom: 20px;
-    margin-left: 20px;
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 30px;
+    line-height: 2em;
 }
-#container {
-    width: 100vw;
-    background-image: url('imagens/background001.jpg');
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
+section.normal {
+    background-color: #ffffff;
+    color: #000000;
 }
-#container2 {
-    width: 100vw;
-    background-image: url('imagens/background002.jpg');
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
+section.imagem {
+    background-color: #000000a7;
+    color: white;
 }
-#container > p {
-    background-color: #d3d3d3;
+section.imagem > p {
+    background-color: #000000;
+    width: 400px;
 }
 footer {
     background-color: #000000;
     color: #ffffff;
     text-align: center;
     padding: 5px;
-}
-footer a {
-    text-decoration: none;
-    color: #ffffff;
-}
-footer a:hover {
-    text-decoration: underline;
-    color: #8b0e00;
-    transition-duration: 1s;
 }
