--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -1,4 +1,11 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
 * {
     margin: 0px;
     padding: 0px;
@@ -6,16 +13,19 @@
 body {
     min-height: 100vh;
     background-color: #a9a9a9;
+    font-family: var(--fonte1);
 }
 header {
     background-color: #000000;
     color: #ffffff;
     padding: 40px;
     text-align: center;
+    font-family: var(--fonte2);
 }
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 10vw;
 }
 header > h3 {
     padding-bottom: 50px;
@@ -34,22 +44,41 @@ section {
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
+    font-family: var(--fonte3);
+    font-size: 4vw;
 }
 section.normal {
     background-color: #ffffff;
     color: #000000;
 }
 section.imagem {
-    background-color: #000000a7;
+    background-color: #000000;
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.405);
+    background-size: cover;
+    background-attachment: fixed;
 }
 section.imagem > p {
-    background-color: #000000;
-    width: 400px;
+    background-color: #000000a0;
+    display: inline-block;
+    padding: 5px;
+    text-shadow: 1px 1px 0px black;
+}
+section > p {
+    padding-bottom: 2em;
+}
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    
 }
 footer {
     background-color: #000000;
     color: #ffffff;
     text-align: center;
     padding: 5px;
+    font-family: var(--fonte1);
 }
